# fplbase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  annotated.js  annotated_dup.js  asset_8h_source.html  asset__manager_8h.html  asset__manager_8h_source.html  async__loader_8h.html  async__loader_8h.js  async__loader_8h_source.html  class_async_resource.html  classes.html  classfplbase_1_1_asset-members.html  classfplbase_1_1_asset.html  classfplbase_1_1_asset.js  classfplbase_1_1_asset_manager-members.html  classfplbase_1_1_asset_manager.html  classfplbase_1_1_asset_manager.js  classfplbase_1_1_async_asset-members.html  classfplbase_1_1_async_asset.html  classfplbase_1_1_async_asset.js  classfplbase_1_1_async_loader-members.html  classfplbase_1_1_async_loader.html  classfplbase_1_1_async_loader.js  classfplbase_1_1_async_resource-members.html  classfplbase_1_1_async_resource.html  classfplbase_1_1_async_resource.js  classfplbase_1_1_button-members.html  classfplbase_1_1_button.html  classfplbase_1_1_button.js  classfplbase_1_1_environment-members.html  classfplbase_1_1_environment.html  classfplbase_1_1_environment.js  classfplbase_1_1_file_asset-members.html  classfplbase_1_1_file_asset.html  classfplbase_1_1_file_asset.js  classfplbase_1_1_gamepad-members.html  (+284 more)
cmake/: ios.cmake  ios.toolchain.xcode.cmake
cmake/sdl/: CMakeLists.txt
cmake/webp/: CMakeLists.txt
demo/: CMakeLists.txt  tex.cpp  tex.glslf  tex.glslv  tri.cpp
disttools/: config.json
docs/src/: api_reference.md  doxyfile  doxygen_layout.xml  groups  index.md
docs/src/programmers_guide/: building.md  building_android.md  building_ios.md  building_linux.md  building_mesh_pipeline.md  building_osx.md  building_windows.md  introduction.md  mesh_pipeline.md
include/: async_loader.h  fpl_common.h  fplbase_common.h  glplatform.h  input.h  keyboard_keycodes.h  keyboard_scancodes.h  material.h  material_manager.h  mesh.h  renderer.h  renderer_android.h  shader.h  utilities.h
include/fplbase/: asset.h  asset_manager.h  async_loader.h  camera_interface.h  config.h  debug_markers.h  environment.h  file_utilities.h  flatbuffer_utils.h  fpl_common.h  glplatform.h  gpu_debug.h  handles.h  input.h  keyboard_keycodes.h  keyboard_scancodes.h  logging.h  material.h  material_manager.h  mesh.h  preprocessor.h  render_state.h  render_target.h  render_utils.h  renderer.h  renderer_android.h  renderer_common.h  renderer_hmd.h  shader.h  systrace.h  texture.h  texture_atlas.h  utilities.h  version.h  viewport.h  wrapper.h
include/fplbase/internal/: detailed_render_state.h  handle_conversions.h  handle_conversions_gl.h  renderer_ios.h  type_conversions_gl.h
jni/: Android.mk  Application.mk  android_config.mk  custom_rules.xml
jni/sdl/: Android.mk
mesh_pipeline/: CMakeLists.txt  mesh_pipeline.cpp  mesh_pipeline.h  mesh_pipeline_main.cpp
samples/: CMakeLists.txt  README_BUILDING.txt
samples/mesh/: AndroidManifest.xml  CMakeLists.txt  mesh.cpp
samples/mesh/assets/: cubemap.ktx  mesh.glslf  mesh.glslv
samples/mesh/assets/meshes/: bird_rig.fplmat  bird_rig.fplmesh  sushi_shrimp.fplmat  sushi_shrimp.fplmesh
samples/mesh/jni/: Android.mk
samples/mesh/rawassets/: export_mesh.sh
samples/mesh/res/values/: strings.xml
samples/texture/: AndroidManifest.xml  CMakeLists.txt  custom_rules.xml  texture.cpp
samples/texture/assets/: tex.astc  tex.glslf  tex.glslv  tex.ktx  tex.pkm
samples/texture/jni/: Android.mk
samples/texture/res/values/: strings.xml
samples/triangle/: AndroidManifest.xml  CMakeLists.txt  triangle.cpp
samples/triangle/jni/: Android.mk  Application.mk
samples/triangle/res/values/: strings.xml
schemas/: common.fbs  materials.fbs  mesh.fbs  shader.fbs  texture_atlas.fbs
scripts/: build_assets.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  (+72 more)
shader_pipeline/: shader_pipeline.cpp  shader_pipeline.h  shader_pipeline_main.cpp
shaders/fplbase/: phong_shading.glslf_h  skinning.glslv_h
src/: asset_manager.cpp  async_loader.cpp  async_loader_sdl.cpp  async_loader_stdlib.cpp  environment_sdl.cpp  environment_stdlib.cpp  file_utilities.cpp  file_utilities_sdl.cpp  file_utilities_stdlib.cpp  gl3stub_android.c  glplatform.cpp  gpu_debug_gl.cpp  input.cpp  input_sdl.cpp  input_stdlib.cpp  logging.cpp  logging_sdl.cpp  logging_stdlib.cpp  main.cpp  main_sdl.cpp  material.cpp  material_manager.cpp  mesh.cpp  mesh_common.cpp  mesh_gl.cpp  mesh_impl_gl.h  mesh_pipeline.cpp  precompiled.h  preprocessor.cpp  render_state.cpp  render_target.cpp  render_target_common.cpp  render_target_gl.cpp  render_utils_gl.cpp  renderer.cpp  renderer_android.cpp  renderer_common.cpp  renderer_gl.cpp  renderer_hmd.cpp  renderer_hmd_gl.cpp  (+14 more)
src_java/com/google/fpl/fpl_base/: FPLActivity.java  FPLTvActivity.java
src_java/com/google/fpl/fplbase/: FPLActivity.java  FPLTvActivity.java
src_java/org/libsdl/app/: SDLActivity.java
test/: CMakeLists.txt
test/unit_tests/: extension_include.inc  if_extension.inc  if_extension_precision.inc  mesh_test.cpp  preprocessor_test.cpp  simple.inc  type_conversions_gl_test.cpp  utils_test.cpp
